profilelist1exp/unpackaged/objects/Sales_Motion__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Sales Motions</relationshipLabel>
        <relationshipName>Sales_Motions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Solutions</fullName>
                </value>
                <value>
                    <fullName>Cross/Non Domain</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>EUC</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Servers</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked to Publish this Sales Motion Page</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Motions</relationshipLabel>
        <relationshipName>Sales_Motions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesEdge_Category__c</fullName>
        <label>SalesEdge Category</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SalesMotionUniqueId__c</fullName>
        <formula>IF( ISBLANK( Product__c ) , TEXT(Domain__c) &amp; TEXT(Solution_Type__c) &amp; TEXT(Solution_Name__c), CASESAFEID( Product__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesMotionUniqueId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Motion_Use_Case__c</fullName>
        <label>Sales Motion Use Case</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Description__c</fullName>
        <label>Solution Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Name__c</fullName>
        <label>Solution Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Solution_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active Directory</fullName>
                    <color>#0B6FCE</color>
                    <label>Active Directory</label>
                </value>
                <value>
                    <fullName>Active System 1000M</fullName>
                </value>
                <value>
                    <fullName>Active System 1000V</fullName>
                </value>
                <value>
                    <fullName>Active System 200M</fullName>
                </value>
                <value>
                    <fullName>Active System 200V</fullName>
                </value>
                <value>
                    <fullName>Active System 50M</fullName>
                </value>
                <value>
                    <fullName>Active System 50V</fullName>
                </value>
                <value>
                    <fullName>Active System 800M</fullName>
                </value>
                <value>
                    <fullName>Active System 800V</fullName>
                </value>
                <value>
                    <fullName>Active System Custom Configuration</fullName>
                </value>
                <value>
                    <fullName>Acuo</fullName>
                </value>
                <value>
                    <fullName>Agfa</fullName>
                </value>
                <value>
                    <fullName>AIM / Scalent</fullName>
                    <color>#78C953</color>
                    <label>AIM / Scalent</label>
                </value>
                <value>
                    <fullName>Allscripts</fullName>
                </value>
                <value>
                    <fullName>Amacus</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Revenue Cycle</fullName>
                    <color>#E27001</color>
                    <label>Ambulatory Revenue Cycle</label>
                </value>
                <value>
                    <fullName>Analytical DataWarehouse</fullName>
                    <color>#A845DC</color>
                    <label>Analytical DataWarehouse</label>
                </value>
                <value>
                    <fullName>Apache Hadoop Platform</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                    <color>#F3D904</color>
                    <label>Appliance</label>
                </value>
                <value>
                    <fullName>Application &amp; Image Management (Physical PCs only)</fullName>
                    <color>#A53711</color>
                    <label>Application &amp; Image Management (Physical PCs only)</label>
                </value>
                <value>
                    <fullName>Application Delivery &amp; Load Balancing</fullName>
                    <color>#66E9BD</color>
                    <label>Application Delivery &amp; Load Balancing</label>
                </value>
                <value>
                    <fullName>Application Optimization</fullName>
                    <color>#0B24BE</color>
                    <label>Application Optimization</label>
                </value>
                <value>
                    <fullName>Application Optimization &amp; Integration</fullName>
                    <color>#419249</color>
                    <label>Application Optimization &amp; Integration</label>
                </value>
                <value>
                    <fullName>Application packaging</fullName>
                    <color>#B6E32E</color>
                    <label>Application packaging</label>
                </value>
                <value>
                    <fullName>Application Performance Management/Next Gen APM</fullName>
                    <color>#641CCF</color>
                    <label>Application Performance Management/Next Gen APM</label>
                </value>
                <value>
                    <fullName>Application Servers</fullName>
                    <color>#F96FB7</color>
                    <label>Application Servers</label>
                </value>
                <value>
                    <fullName>Archiving</fullName>
                </value>
                <value>
                    <fullName>Archiving, Other Solutions</fullName>
                    <color>#2F5D85</color>
                    <label>Archiving, Other Solutions</label>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                    <color>#AFCADF</color>
                    <label>Assessment</label>
                </value>
                <value>
                    <fullName>Asset and SW Management Licensing</fullName>
                    <color>#8F6429</color>
                    <label>Asset and SW Management Licensing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Domain__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active Infrastructure</fullName>
                </value>
                <value>
                    <fullName>APOS</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>BigData</fullName>
                </value>
                <value>
                    <fullName>Big Data Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Business Processing</fullName>
                </value>
                <value>
                    <fullName>Campus</fullName>
                </value>
                <value>
                    <fullName>Client Hardware Only</fullName>
                </value>
                <value>
                    <fullName>Client Hardware w/ Activation</fullName>
                </value>
                <value>
                    <fullName>Cloud Client Computing for Retail</fullName>
                </value>
                <value>
                    <fullName>Cloud Integration</fullName>
                </value>
                <value>
                    <fullName>Cloud Services Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Collabroation</fullName>
                </value>
                <value>
                    <fullName>Compellent</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Core Datacenter Applications</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Custom Rack Integration (Integrator)</fullName>
                </value>
                <value>
                    <fullName>Databases</fullName>
                </value>
                <value>
                    <fullName>Data Center/Unified Fabric</fullName>
                </value>
                <value>
                    <fullName>DataCenter Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Data Management Solutions</fullName>
                </value>
                <value>
                    <fullName>DataWarehouse</fullName>
                </value>
                <value>
                    <fullName>DB</fullName>
                </value>
                <value>
                    <fullName>Dell Bring Your Own Device Solutions (BYOD)</fullName>
                </value>
                <value>
                    <fullName>Desktop Virtualization</fullName>
                </value>
                <value>
                    <fullName>Desktop Virtualization Solutions</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Motion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_unpublished_Sales_Motions</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Domain__c</columns>
        <columns>Solution_Type__c</columns>
        <columns>Solution_Name__c</columns>
        <columns>Product__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All unpublished Sales Motions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cross_Non_Domain_Solutions</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Domain__c</columns>
        <columns>Solution_Type__c</columns>
        <columns>Solution_Name__c</columns>
        <columns>Solution_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Domain__c</field>
            <operation>equals</operation>
            <value>Cross/Non Domain</value>
        </filters>
        <label>Cross/Non Domain Solutions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Domain_Solution_Type_and_Solution_Name</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <columns>Solution_Type__c</columns>
        <columns>Solution_Name__c</columns>
        <columns>SalesEdge_Category__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Motion__c.Domain_Type_and_Name</value>
        </filters>
        <label>Domain, Solution Type and Solution Name</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUC_Solution_Sales_Motions</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Domain__c</columns>
        <columns>Solution_Type__c</columns>
        <columns>Solution_Name__c</columns>
        <columns>Solution_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Domain__c</field>
            <operation>equals</operation>
            <value>EUC</value>
        </filters>
        <label>EUC Solutions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Networking_Solutions</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Domain__c</columns>
        <columns>Solution_Type__c</columns>
        <columns>Solution_Name__c</columns>
        <columns>Solution_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Domain__c</field>
            <operation>equals</operation>
            <value>Networking</value>
        </filters>
        <label>Networking Solutions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Product</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <columns>Solution_Type__c</columns>
        <columns>Solution_Name__c</columns>
        <columns>SalesEdge_Category__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Motion__c.Product</value>
        </filters>
        <label>Product</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Servers_Solutions</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Domain__c</columns>
        <columns>Solution_Type__c</columns>
        <columns>Solution_Name__c</columns>
        <columns>Solution_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Domain__c</field>
            <operation>equals</operation>
            <value>Storage</value>
        </filters>
        <label>Storage Solutions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Servers_Solutions1</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Domain__c</columns>
        <columns>Solution_Type__c</columns>
        <columns>Solution_Name__c</columns>
        <columns>Solution_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Domain__c</field>
            <operation>equals</operation>
            <value>Servers</value>
        </filters>
        <label>Servers Solutions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Software_Solutions</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Domain__c</columns>
        <columns>Solution_Type__c</columns>
        <columns>Solution_Name__c</columns>
        <columns>Solution_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Domain__c</field>
            <operation>equals</operation>
            <value>Software</value>
        </filters>
        <label>Software Solutions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Motion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Motions</pluralLabel>
    <recordTypes>
        <fullName>Domain_Type_and_Name</fullName>
        <active>true</active>
        <label>Domain, Type and Name</label>
    </recordTypes>
    <recordTypes>
        <fullName>Generic_Sales</fullName>
        <active>true</active>
        <label>Generic Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Product_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
    NOT (
        ISBLANK(Product__c)
    ),
    Product__r.IsActive = false
)</errorConditionFormula>
        <errorMessage>The Product that you are trying to add is an inactive Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unique_SalesMotion_Name</fullName>
        <active>true</active>
        <errorConditionFormula>IF(RecordType.Name=&apos;Generic Sales&apos;, 
Name=VLOOKUP( $ObjectType.Sales_Motion__c.Fields.Name , $ObjectType.Sales_Motion__c.Fields.Name , Name ) &amp;&amp; Id &lt;&gt; VLOOKUP( $ObjectType.Sales_Motion__c.Fields.Id , $ObjectType.Sales_Motion__c.Fields.Name , Name ),FALSE)</errorConditionFormula>
        <errorMessage>Generic Sales with same Name already exists</errorMessage>
    </validationRules>
</CustomObject>